[project]
name = "yac"
version = "0.1.0"
description = "Event-triggered control simulation with quantization and packet loss."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[project.scripts]
yac = "yac_sim.__main__:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yac_sim"]
